@@ -1,73 +1,64 @@
 package com.fiap.tech.challenge.domain.unit.restaurantuser;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
-
-import com.fiap.tech.challenge.domain.factory.UserTypeFactory;
-import com.fiap.tech.challenge.domain.restaurantuser.entity.RestaurantUser;
+import com.fiap.tech.challenge.domain.factory.RestaurantUserTestFactory;
+import com.fiap.tech.challenge.domain.factory.UserTestFactory;
 import com.fiap.tech.challenge.domain.restaurantuser.usecase.RestaurantUserCheckForDeleteUseCase;
 import com.fiap.tech.challenge.domain.user.entity.User;
+import com.fiap.tech.challenge.domain.usertype.entity.UserType;
 import com.fiap.tech.challenge.global.exception.EntityCannotBeDeletedException;
-import java.util.Collections;
-import java.util.List;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class RestaurantUserCheckForDeleteUseCaseTest {
-    private static final String CANNOT_DELETE_ADMIN_USER_EXCEPTION_MESSAGE = "Usuários administradores não podem ser excluídos.";
-    private static final String CANNOT_DELETE_ONLY_OWNER_USER_EXCEPTION_MESSAGE = "Não foi possível realizar a exclusão pois deve existir pelo menos uma associação de usuário dono de restaurante com o restaurante.";
 
-    AutoCloseable openMocks;
+    @DisplayName("Teste de sucesso - Deve conseguir deletar uma associação entre usuário e restaurante com sucesso")
+    @Test
+    void shouldDeleteRestaurantUserUseCaseSuccess() {
+        RestaurantUserCheckForDeleteUseCase restaurantUserCheckForDeleteUseCase = new RestaurantUserCheckForDeleteUseCase(UserTestFactory.loadEntityClient(), List.of(RestaurantUserTestFactory.loadEntityRestaurantUser()));
 
-    @Mock
-    private User loggedUser;
-    @Mock
-    private List<RestaurantUser> restaurantUserList;
-    @Mock
-    private RestaurantUser restaurantUser;
-    @Mock
-    private User ownerUser;
+        boolean isAllowedToDelete = restaurantUserCheckForDeleteUseCase.isAllowedToDelete();
 
-    @BeforeEach
-    void setup(){
-        openMocks = MockitoAnnotations.openMocks(this);
-    }
-
-    @AfterEach
-    void teardown() throws Exception{
-        openMocks.close();
+        assertThat(isAllowedToDelete).isTrue();
     }
 
     @Test
-    @DisplayName("Teste de sucesso - o usuário deve estar disponível para exclusão.")
-    void restaurantUserShouldBeAvailableForDeletion(){
-        when(loggedUser.getType()).thenReturn(UserTypeFactory.loadEntityUserTypeClient());
+    @DisplayName("Teste de falha - Deve lançar EntityCannotBeDeletedException se o usuário é admin")
+    void shouldThrowEntityCannotBeDeletedExceptionIfUserIsAdmin() {
+        User admin = mock(User.class);
+        UserType adminType = mock(UserType.class);
+        when(admin.getType()).thenReturn(adminType);
+        when(admin.getType().getName()).thenReturn("ADMIN");
 
-        assertTrue(new RestaurantUserCheckForDeleteUseCase(loggedUser, restaurantUserList).isAllowedToDelete());
+        EntityCannotBeDeletedException exception =  assertThrows(EntityCannotBeDeletedException.class, () -> new RestaurantUserCheckForDeleteUseCase(admin, List.of(RestaurantUserTestFactory.loadEntityRestaurantUser())));
+
+        assertEquals("Usuários administradores não podem ser excluídos.", exception.getMessage());
     }
 
     @Test
-    @DisplayName("Teste de falha - deve lançar exceção ao tentar excluir usuário Admin.")
-    void adminRestaurantUserShouldNotBeAvailableForDeletion(){
-        when(loggedUser.getType()).thenReturn(UserTypeFactory.loadEntityUserTypeAdmin());
+    @DisplayName("Teste de falha - Deve lançar EntityCannotBeDeletedException se o dono de restaurante só tiver uma associação com o restaurante")
+    void shouldThrowEntityCannotBeDeletedExceptionIfUserIsOwner() {
+        EntityCannotBeDeletedException exception =  assertThrows(EntityCannotBeDeletedException.class, () -> new RestaurantUserCheckForDeleteUseCase(UserTestFactory.loadEntityOwner(), List.of(RestaurantUserTestFactory.loadEntityRestaurantUser())));
 
-        EntityCannotBeDeletedException exception = assertThrows(EntityCannotBeDeletedException.class, () -> new RestaurantUserCheckForDeleteUseCase(loggedUser, restaurantUserList));
-        assertEquals(CANNOT_DELETE_ADMIN_USER_EXCEPTION_MESSAGE, exception.getMessage());
+        assertEquals("Não foi possível realizar a exclusão pois deve existir pelo menos uma associação de usuário dono de restaurante com o restaurante.", exception.getMessage());
     }
 
     @Test
-    @DisplayName("Teste de falha - deve lançar exceção ao tentar excluir um usuário dono de restaurante com apenas um usuário dono associado")
-    void onlyRestaurantUserOwnerShouldNotBeAvailableForDeletion(){
-        restaurantUserList = Collections.singletonList(restaurantUser);
-        when(loggedUser.getType()).thenReturn(UserTypeFactory.loadEntityUserTypeOwner());
-        when(restaurantUser.getUser()).thenReturn(ownerUser);
-        when(ownerUser.getType()).thenReturn(UserTypeFactory.loadEntityUserTypeOwner());
+    @DisplayName("Teste de falha - Deve lançar NullPointerException se Usuário for nulo")
+    void shouldThrowExceptionIfUserIsNull() {
+        assertThrows(NullPointerException.class, () -> new RestaurantUserCheckForDeleteUseCase(null, List.of(RestaurantUserTestFactory.loadEntityRestaurantUser())));
+    }
 
-        EntityCannotBeDeletedException exception = assertThrows(EntityCannotBeDeletedException.class, () -> new RestaurantUserCheckForDeleteUseCase(loggedUser, restaurantUserList));
-        assertEquals(CANNOT_DELETE_ONLY_OWNER_USER_EXCEPTION_MESSAGE, exception.getMessage());
+    @Test
+    @DisplayName("Teste de falha - Deve lançar NullPointerException se lista de RestaurantUser for nulo")
+    void shouldThrowExceptionIfRestaurantIsNull() {
+        assertThrows(NullPointerException.class, () -> new RestaurantUserCheckForDeleteUseCase(UserTestFactory.loadEntityOwner(), null));
     }
 }
